--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,11 +4,14 @@
     <string name="login.message.password">Password</string>
     <string name="login.button.signin">Iniciar sesión</string>
     <string name="login.button.signup">Crear cuenta</string>
-    
+
     <string name="login.error.message.signin">Imposible iniciar sesión %s</string>
     <string name="login.error.message.signup">Imposible registrar nuevo usuario %s</string>
     <string name="login.notice.message.signup">Usuario agregado exitosamente</string>
 
-        <string name="contactlist.menu.action.signoff">Cerrar sesión</string>
+    <string name="contactlist.menu.action.signoff">Cerrar sesión</string>
     <string name="contactlist.title">Contactos</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
